# cadcad-rust-poc

./: .gitignore  Cargo.toml  README.md  config_prey_predator.py  config_prey_predator_with_class.py  test.py  test_pyo3.py
cprofile_used/: config_prey_predator.py
doc/: mypyc_vs_cython.md
perf_tests/pure_python_impl/: main.py
perf_tests/pure_rust_impl/src/: config_example_variadic_enum.rs  config_prey_predator_float.rs  lib.rs  main.rs
perf_tests/user_config_used/: config_prey_predator.py
perf_tests/using_cadCad_py_pkg/: config_pp.py  config_prey_predator.py  main.py
src/: config_example_struct.rs  config_example_struct_2.rs  config_example_variadic.rs  config_example_variadic_enum.rs  config_prey_predator_float.rs  config_prey_predator_integer.rs  lib.rs  lib_for_python.rs  main.depr.rs  main.rs  main_first_working_generalized.rs  prey_predator_config.rs  prey_predator_config_float.rs  prey_predator_config_integer.rs
src/archived_using_box_any/: config_prey_predator_integer_box_any.rs  lib.rs  main.rs
using_all_code_in_py/: main.py
using_cadCad_py_pkg/: config.py  config_pp.py  main.py
using_pure_python/: main.py
using_pure_rust/: Cargo.toml
using_pure_rust/src/: main.rs
