[package]
name = "cadcad_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# # For Python FFI
# [lib]
# name = "test"
# crate-type = ["dylib"] # or cdylib? Read more.

[dependencies]
rand = "0.8.4"
libc = "0.2"
lazy_static = "1.4.0"
# pyo3 = "0.15.1"